# megadisplay

./: .gitignore  Cargo.toml  HDR_ROADMAP.md  Makefile  PKGBUILD  README.md  REVERSE_ENGINEER.md  TODO.md  fix_gui.py  patch_gui.py  patch_strings.sh  superDisplay.aiui  superDisplay.msi  test_gst.py  test_unbuffered.kt
APPDIR:./: EULA.rtf  NOTICE.txt
APPDIR:./drivers/superdisplay_aoap/: superdisplay_aoap.cat  superdisplay_aoap.inf
APPDIR:./drivers/superdisplay_display/: superdisplay_display.cat  superdisplay_display.inf
APPDIR:./drivers/superdisplay_hid/: superdisplay_hid.cat  superdisplay_hid.inf
APPDIR:./drivers/superdisplay_hidbus/: superdisplay_hidbus.cat  superdisplay_hidbus.inf  superdisplay_hidbus.sys
APPDIR:./drivers/superdisplay_wpdfilter/: superdisplay_wpdfilter.cat  superdisplay_wpdfilter.inf  superdisplay_wpdfilter.sys
android/: local.properties  settings.gradle.kts
android/app/: build.gradle.kts  release.keystore
android/app/src/main/: AndroidManifest.xml
config/: megadisplay.toml
ctl/: Cargo.toml  fix_gui.py  patch2.py
ctl/src/: cli.rs  gui.rs  ipc_types.rs  lib.rs
daemon/: Cargo.toml  test_aoap
daemon/src/: config.rs  display.rs  inject.rs  input.rs  ipc.rs  main.rs  tcp.rs  transport.rs  video.rs  wayland.rs
desktop/: megadisplayctl.desktop
driver/: Cargo.toml
driver/megadisplay-driver/: Cargo.toml
driver/megadisplay-driver/src/: display.rs  inject.rs  input.rs  main.rs  tcp.rs  transport.rs  video.rs  wayland.rs
driver/megadisplay-protocol/: Cargo.toml
driver/megadisplay-protocol/src/: framing.rs  handshake.rs  lib.rs  messages.rs
extractions/SuperDisplay_Installer_v1.1.10.exe.extracted/E27010/: 0  u11  u13  u15  u17  u19  u2  u21  u23  u25  u27  u29  u31  u5  u7  u9
extractions/SuperDisplay_Installer_v1.1.10.exe.extracted/E540F0/: a10  a8  a9
packaging/arch/: PKGBUILD
protocol/: Cargo.toml
protocol/src/: lib.rs  messages.rs
re/: axml.py  strings_display.txt  strings_service.txt  strings_service_el.txt  strings_settings.txt  strings_settings_el.txt
re/android-apk-base/: resources.arsc
re/android-apk-base/res/anim/: abc_tooltip_enter.xml  abc_tooltip_exit.xml  m3_motion_fade_enter.xml  m3_motion_fade_exit.xml  popup_enter.xml  popup_exit.xml
re/android-apk-base/res/anim-v21/: m3_bottom_sheet_slide_in.xml  m3_bottom_sheet_slide_out.xml  m3_side_sheet_enter_from_left.xml  m3_side_sheet_enter_from_right.xml  m3_side_sheet_exit_to_left.xml  m3_side_sheet_exit_to_right.xml
re/android-apk-base/res/animator/: m3_btn_elevated_btn_state_list_anim.xml  m3_btn_state_list_anim.xml  m3_card_elevated_state_list_anim.xml  m3_card_state_list_anim.xml  m3_chip_state_list_anim.xml  m3_elevated_chip_state_list_anim.xml  m3_extended_fab_change_size_collapse_motion_spec.xml  m3_extended_fab_change_size_expand_motion_spec.xml  m3_extended_fab_hide_motion_spec.xml  m3_extended_fab_show_motion_spec.xml  m3_extended_fab_state_list_animator.xml  mtrl_btn_state_list_anim.xml  mtrl_card_state_list_anim.xml  mtrl_chip_state_list_anim.xml  mtrl_extended_fab_state_list_animator.xml
re/android-apk-base/res/animator-v21/: design_appbar_state_list_animator.xml  m3_appbar_state_list_animator.xml
re/android-apk-base/res/color-v21/: abc_btn_colored_borderless_text_material.xml
re/android-apk-base/res/color-v31/: m3_dynamic_dark_default_color_primary_text.xml  m3_dynamic_dark_highlighted_text.xml  (+8 more)
re/apktool-out/: AndroidManifest.xml  apktool.yml
re/apktool-out/original/: AndroidManifest.xml
re/jadx-out/resources/: AndroidManifest.xml  kotlin-tooling-metadata.json
re/notes/: AndroidManifest.decoded.xml  strings-installer.txt  strings-payload.txt
systemd/: megadisplayd.service  megadisplayd@.service
udev/: 99-megadisplay.rules
(+7877 files in other folders)
