[package]
name = "megadisplay-ctl"
description = "MegaDisplay control utilities (CLI + GUI)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "megadisplayctl"
path = "src/cli.rs"

[[bin]]
name = "megadisplayctl-gui"
path = "src/gui.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
eframe = "0.31"
egui_plot = "0.31"

[lib]
name = "megadisplay_ctl_lib"
path = "src/lib.rs"
