[workspace]
resolver = "2"
members = [
    "megadisplay-driver",
    "megadisplay-protocol",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
megadisplay-protocol = { path = "megadisplay-protocol" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
bytemuck = { version = "1", features = ["derive"] }
lz4_flex = "0.11"
