[package]
name = "megadisplay-driver"
description = "Linux/Wayland driver for MegaDisplay — open-source SuperDisplay replacement"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "megadisplay-driver"
path = "src/main.rs"

[dependencies]
megadisplay-protocol.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nusb = "0.2"
clap = { version = "4", features = ["derive"] }
lz4_flex = { workspace = true }
openh264 = { version = "0.9", optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }
libc = { version = "0.2", optional = true }
evdev = { version = "0.13", optional = true }

[features]
default = []
video-encode = ["dep:openh264"]
wayland = ["dep:wayland-client", "dep:wayland-protocols-wlr", "dep:libc"]
input-inject = ["dep:evdev", "dep:libc"]
